[gd_scene load_steps=9 format=3 uid="uid://bkctk521mrl0q"]

[ext_resource type="Script" path="res://scripts/ui/menu/World/world_select.gd" id="1_j1qpb"]
[ext_resource type="PackedScene" uid="uid://dvxxdm807x881" path="res://scenes/ui/world_select/world/world_1.tscn" id="2_53s81"]
[ext_resource type="PackedScene" uid="uid://njqkv5i1atvi" path="res://scenes/ui/ui_icon_button.tscn" id="3_65no8"]
[ext_resource type="PackedScene" uid="uid://clhx601gx5jh6" path="res://scenes/ui/world_select/scroll_component.tscn" id="3_iof5u"]
[ext_resource type="PackedScene" uid="uid://cra3del8x3boe" path="res://scenes/ui/world_select/world/world_2.tscn" id="3_k3qxk"]
[ext_resource type="PackedScene" uid="uid://b4nepjhqhaa6" path="res://scenes/ui/world_select/world/world_3.tscn" id="4_8d1x4"]
[ext_resource type="PackedScene" uid="uid://cicawq5hwbh6v" path="res://scenes/ui/world_select/world/world_4.tscn" id="5_3jtnu"]
[ext_resource type="PackedScene" uid="uid://l4uy665qgi6n" path="res://scenes/ui/ui_button.tscn" id="8_souvd"]

[node name="WorldSelect" type="Node2D" node_paths=PackedStringArray("scroll", "dot_container")]
script = ExtResource("1_j1qpb")
world = Array[PackedScene]([ExtResource("2_53s81"), ExtResource("3_k3qxk"), ExtResource("4_8d1x4"), ExtResource("5_3jtnu")])
scroll = NodePath("ScrollComponent")
dot_container = NodePath("CenterContainer/DotContainer")

[node name="right" parent="." instance=ExtResource("3_65no8")]
z_index = 2
offset_left = 216.0
offset_top = 55.0
offset_right = 232.0
offset_bottom = 73.0

[node name="left" parent="." instance=ExtResource("3_65no8")]
z_index = 2
offset_left = 8.0
offset_top = 55.0
offset_right = 24.0
offset_bottom = 73.0

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_top = 104.0
offset_right = 240.0
offset_bottom = 136.0

[node name="DotContainer" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = -16
alignment = 1

[node name="ScrollComponent" parent="." node_paths=PackedStringArray("world_select") instance=ExtResource("3_iof5u")]
world_select = NodePath("..")

[node name="UiButton" parent="." instance=ExtResource("8_souvd")]
offset_left = 8.0
offset_top = 112.0
offset_right = 86.0
offset_bottom = 130.0
text = "Reset levels"

[connection signal="pressed" from="right" to="." method="_on_right_pressed"]
[connection signal="pressed" from="left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="UiButton" to="." method="_on_ui_button_pressed"]
